# revalio-public

./: .dockerignore  .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/: launch.json
.claude/skills/hiro-design/: .thumbnail  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
.github/workflows/: ci.yml
apps/api/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/api/scripts/: audit-null-value-usd.ts  validate-sprint-c.ts  (+3 more)
apps/indexer/: .env.example  Cargo.toml  Dockerfile  diesel.toml  run-live.ps1
apps/indexer/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
apps/indexer/migrations/2026-05-30-000001_init/: down.sql  up.sql
apps/indexer/migrations/2026-05-31-000001_balances_view/: down.sql  up.sql
apps/indexer/migrations/2026-05-31-000002_positions_object_unique/: down.sql  up.sql
apps/indexer/migrations/2026-05-31-000003_wallet_profiles/: down.sql  up.sql
apps/indexer/migrations/2026-06-15-000001_wallet_profile_bio/: down.sql  up.sql
apps/indexer/src/: handlers.rs  main.rs  models.rs  schema.rs
apps/web/: .env.example  Dockerfile  bolt.html  index.html  lab.html  package.json  vite.bolt.config.ts  vite.config.ts  vite.lab.config.ts
docs/: deepbook-post-mvp.md  mvp.md  sprint-c-validation.md
docs/grant-video/: NARRATION.md  README.md  SCENARIO.md
grant-video/: .gitignore  README.md  package-lock.json  package.json  record.mjs  scenario.mjs
infra/: nginx.conf  prometheus.yml  seed.sql
infra/grafana/: alerts.yml
(+273 files in other folders)
